# simplicity-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
simplicity-opengl/: .cproject  .project  CMakeLists.txt  simplicity-opengl.vcxproj
simplicity-opengl-demo/: .cproject  .project
simplicity-opengl-demo/src/main/c++/simplicity/opengl/: OpenGLDemo.cpp  OpenGLDemo.h  RunAllDemos.cpp
simplicity-opengl-demo/src/main/c++/simplicity/opengl/picking/: SimpleOpenGLPickerDemo.cpp  SimpleOpenGLPickerDemo.h
simplicity-opengl-demo/src/main/c++/simplicity/opengl/rendering/: AlwaysAndNotEqualStencilOpenGLRenderersDemo.cpp  AlwaysAndNotEqualStencilOpenGLRenderersDemo.h  BlendingOpenGLRendererDemo.cpp  BlendingOpenGLRendererDemo.h  CullFaceOpenGLRendererDemo.cpp  CullFaceOpenGLRendererDemo.h  DepthClearingOpenGLRendererDemo.cpp  DepthClearingOpenGLRendererDemo.h  MonoColourOpenGLRendererDemo.cpp  MonoColourOpenGLRendererDemo.h  OutlineOpenGLRendererDemo.cpp  OutlineOpenGLRendererDemo.h  SimpleOpenGLRendererDemo.cpp  SimpleOpenGLRendererDemo.h  StencilClearingOpenGLRendererDemo.cpp  StencilClearingOpenGLRendererDemo.h
simplicity-opengl-test/: .cproject  .project
simplicity-opengl-test/src/main/c++/simplicity/opengl/picking/: SimpleOpenGLPickerTest.cpp  SimpleOpenGLPickerTest.h
simplicity-opengl-test/src/main/c++/simplicity/opengl/picking/engine/: SimpleOpenGLPickingEngineTest.cpp
simplicity-opengl-test/src/main/c++/simplicity/opengl/rendering/: SimpleOpenGLCameraTest.cpp  SimpleOpenGLLightTest.cpp
simplicity-opengl-test/src/main/c++/simplicity/opengl/rendering/engine/: SimpleOpenGLRenderingEngineTest.cpp
simplicity-opengl/dep/freeimageplus/: VERSION
simplicity-opengl/dep/glew/: VERSION
simplicity-opengl/src/main/c++/simplicity/opengl/: API.h
simplicity-opengl/src/main/c++/simplicity/opengl/common/: OpenGL.cpp  OpenGL.h  OpenGLBuffer.h  OpenGLFence.h  PersistentlyMappedOpenGLBuffer.cpp  SimpleOpenGLBuffer.cpp
simplicity-opengl/src/main/c++/simplicity/opengl/model/: OpenGLMesh.cpp  OpenGLMesh.h  OpenGLMeshBuffer.cpp  OpenGLMeshBuffer.h  OpenGLModelFactory.cpp  OpenGLModelFactory.h  OpenGLText.h
simplicity-opengl/src/main/c++/simplicity/opengl/picking/: SimpleOpenGLPicker.cpp  SimpleOpenGLPicker.h
simplicity-opengl/src/main/c++/simplicity/opengl/picking/engine/: SimpleOpenGLPickingEngine.cpp  SimpleOpenGLPickingEngine.h
simplicity-opengl/src/main/c++/simplicity/opengl/rendering/: AbstractOpenGLRenderer.cpp  MultiDrawOpenGLRenderer.cpp  MultiDrawOpenGLRenderer.h  OpenGL.cpp  OpenGLCamera.cpp  OpenGLCamera.h  OpenGLFragmentShader.cpp  OpenGLFragmentShader.h  OpenGLGeometryShader.cpp  OpenGLGeometryShader.h  OpenGLLight.cpp  OpenGLLight.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRenderingEngine.cpp  OpenGLRenderingEngine.h  OpenGLRenderingFactory.cpp  OpenGLRenderingFactory.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexShader.cpp  OpenGLVertexShader.h  SimpleOpenGLCamera.cpp  SimpleOpenGLCamera.h  SimpleOpenGLLight.cpp  SimpleOpenGLLight.h  SimpleOpenGLRenderer.cpp  SimpleOpenGLRenderer.h
simplicity-opengl/src/main/c++/simplicity/opengl/rendering/engine/: SimpleOpenGLRenderingEngine.cpp  SimpleOpenGLRenderingEngine.h
simplicity-opengl/src/main/c++/simplicity/opengl/scene/: OpenGLCamera.cpp  OpenGLCamera.h  OpenGLLight.cpp  OpenGLLight.h
src/main/c++/: --simplicity-opengl-glew.h
src/main/c++/simplicity/opengl/: API.h
src/main/c++/simplicity/opengl/common/: OpenGL.cpp  OpenGL.h  OpenGLFence.cpp  PersistentlyMappedOpenGLBuffer.cpp  PersistentlyMappedOpenGLBuffer.h  SimpleOpenGLBuffer.h
src/main/c++/simplicity/opengl/model/: OpenGLMeshBuffer.cpp  OpenGLMeshBuffer.h  OpenGLModelFactory.cpp  OpenGLModelFactory.h
src/main/c++/simplicity/opengl/rendering/: AbstractOpenGLRenderer.cpp  AbstractOpenGLRenderer.h  BloomPostProcessor.cpp  BloomPostProcessor.h  DefaultShaderSource.cpp  DefaultShaderSource.h  MultiDrawOpenGLRenderer.cpp  MultiDrawOpenGLRenderer.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRenderingEngine.cpp  OpenGLRenderingEngine.h  OpenGLRenderingFactory.cpp  OpenGLRenderingFactory.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  ShaderSource.h  SimpleOpenGLRenderer.cpp
